--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-09 Sun 16:43]
+#+CAPTION: Clock summary at [2016-10-09 Sun 17:00]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *91:56* |       |       | 100.0 |
+| *Total time*                                                                | *92:12* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 91:56   |       |       | 100.0 |
-| Active                                                                      |         | 91:56 |       | 100.0 |
+| Stories                                                                     | 92:12   |       |       | 100.0 |
+| Active                                                                      |         | 92:12 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
 | COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   2.7 |
@@ -41,9 +41,9 @@
 | CANCELLED Add streaming settings expander                                   |         |       |  0:36 |   0.7 |
 | COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.7 |
 | COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.3 |
-| COMPLETED Remove empty context                                              |         |       |  1:09 |   1.3 |
+| COMPLETED Remove empty context                                              |         |       |  1:09 |   1.2 |
 | COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.0 |
-| COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.5 |
+| COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.4 |
 | COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   7.7 |
 | COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.6 |
 | COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.4 |
@@ -65,6 +65,7 @@
 | COMPLETED Create a dynamic expander in yarn                                 |         |       |  5:52 |   6.4 |
 | COMPLETED Create a streaming configuration expander                         |         |       |  1:15 |   1.4 |
 | COMPLETED Merge helper annotations with helper expander                     |         |       |  0:14 |   0.3 |
+| COMPLETED Merge aspect annotations with expander                            |         |       |  0:16 |   0.3 |
 | STARTED Merge annotations with formattables                                 |         |       |  2:35 |   2.8 |
 | STARTED Clean up terminology in dynamic                                     |         |       |  1:07 |   1.2 |
 | STARTED Rewrite profile support                                             |         |       |  1:26 |   1.6 |
@@ -1345,6 +1346,12 @@ Tasks:
     CLOCK: [2016-10-09 Sun 16:29]--[2016-10-09 Sun 16:43] =>  0:14
 
 - Move code from annotations.
+
+*** COMPLETED Merge aspect annotations with expander                  :story:
+    CLOSED: [2016-10-09 Sun 17:00]
+    CLOCK: [2016-10-09 Sun 16:44]--[2016-10-09 Sun 17:00] =>  0:16
+
+Get rid of the annotations for aspects.
 
 *** STARTED Merge annotations with formattables                        :epic:
     CLOCK: [2016-10-09 Sun 10:41]--[2016-10-09 Sun 13:14] =>  2:33
