--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,62 +13,63 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-09 Sun 17:00]
+#+CAPTION: Clock summary at [2016-10-09 Sun 17:04]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *92:12* |       |       | 100.0 |
+| *Total time*                                                                | *97:40* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 92:12   |       |       | 100.0 |
-| Active                                                                      |         | 92:12 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.0 |
+| Stories                                                                     | 97:40   |       |       | 100.0 |
+| Active                                                                      |         | 97:40 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   5.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
-| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   2.7 |
-| COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.4 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   1.9 |
+| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   2.6 |
+| COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.3 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   1.8 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       |  0:22 |   0.4 |
 | COMPLETED Add new index to formtter container                               |         |       |  0:19 |   0.3 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       |  0:49 |   0.9 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       |  0:49 |   0.8 |
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       |  0:27 |   0.5 |
-| COMPLETED Investigate borked travis build                                   |         |       |  0:37 |   0.7 |
+| COMPLETED Investigate borked travis build                                   |         |       |  0:37 |   0.6 |
 | COMPLETED Add decoration expander to quilt.cpp                              |         |       |  0:23 |   0.4 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       |  1:26 |   1.6 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       |  1:26 |   1.5 |
 | COMPLETED Run tests that are passing on windows                             |         |       |  0:10 |   0.2 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       |  1:26 |   1.6 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       |  1:26 |   1.5 |
 | COMPLETED Merge pre and post workflows                                      |         |       |  0:16 |   0.3 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       |  0:15 |   0.3 |
-| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.3 |
-| CANCELLED Add streaming settings expander                                   |         |       |  0:36 |   0.7 |
-| COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.7 |
-| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.3 |
+| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.1 |
+| CANCELLED Add streaming settings expander                                   |         |       |  0:36 |   0.6 |
+| COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.6 |
+| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.1 |
 | COMPLETED Remove empty context                                              |         |       |  1:09 |   1.2 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.0 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   3.8 |
 | COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.4 |
-| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   7.7 |
-| COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.6 |
+| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   7.3 |
+| COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.5 |
 | COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.4 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       |  0:15 |   0.3 |
 | CANCELLED Remove formatter id                                               |         |       |  0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   3.7 |
+| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   3.5 |
 | COMPLETED Remove =original_model_name=                                      |         |       |  0:16 |   0.3 |
-| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.5 |
+| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.2 |
 | COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
-| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.3 |
-| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.5 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.1 |
+| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.3 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.4 |
-| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.0 |
+| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   3.8 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
-| COMPLETED Improve project banner                                            |         |       |  0:32 |   0.6 |
-| CANCELLED Add support for profiles                                          |         |       | 10:40 |  11.6 |
-| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |   9.6 |
-| COMPLETED Create a dynamic expander in yarn                                 |         |       |  5:52 |   6.4 |
-| COMPLETED Create a streaming configuration expander                         |         |       |  1:15 |   1.4 |
-| COMPLETED Merge helper annotations with helper expander                     |         |       |  0:14 |   0.3 |
+| COMPLETED Improve project banner                                            |         |       |  0:32 |   0.5 |
+| CANCELLED Add support for profiles                                          |         |       | 10:40 |  10.9 |
+| COMPLETED Move emacs to rtags                                               |         |       |  5:28 |   5.6 |
+| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |   9.0 |
+| COMPLETED Create a dynamic expander in yarn                                 |         |       |  5:52 |   6.0 |
+| COMPLETED Create a streaming configuration expander                         |         |       |  1:15 |   1.3 |
+| COMPLETED Merge helper annotations with helper expander                     |         |       |  0:14 |   0.2 |
 | COMPLETED Merge aspect annotations with expander                            |         |       |  0:16 |   0.3 |
-| STARTED Merge annotations with formattables                                 |         |       |  2:35 |   2.8 |
-| STARTED Clean up terminology in dynamic                                     |         |       |  1:07 |   1.2 |
-| STARTED Rewrite profile support                                             |         |       |  1:26 |   1.6 |
+| STARTED Merge annotations with formattables                                 |         |       |  2:35 |   2.6 |
+| STARTED Clean up terminology in dynamic                                     |         |       |  1:07 |   1.1 |
+| STARTED Rewrite profile support                                             |         |       |  1:26 |   1.5 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -1238,6 +1239,20 @@ Algorithm:
     formatter specific profile. If so, see if its enabled or not.
   - if nothing was found, get the default value of the meta-data.
 
+*** COMPLETED Move emacs to rtags                                     :spike:
+    CLOSED: [2016-10-09 Sun 17:04]
+    CLOCK: [2016-10-08 Sat 09:02]--[2016-10-08 Sat 13:02] =>  4:00
+    CLOCK: [2016-10-08 Sat 21:02]--[2016-10-08 Sat 22:30] =>  1:28
+
+Our present emacs setup is costly:
+
+- no ide-like features meaning renames, lookups etc take longer than
+  needed;
+- problems with ede mode on loading large compilation databases and
+  locking up emacs.
+
+Try to move to a full rtags setup.
+
 *** COMPLETED Refactor =yarn.dia= transformer                         :story:
     CLOSED: [2016-10-07 Fri 11:34]
     CLOCK: [2016-10-07 Fri 11:08]--[2016-10-07 Fri 11:35] =>  0:27
@@ -1341,7 +1356,7 @@ Tasks:
 - make use of container in helper expander.
 - delete streaming annotations, factory etc in annotations.
 
-*** COMPLETED Merge helper annotations with helper expander
+*** COMPLETED Merge helper annotations with helper expander           :story:
     CLOSED: [2016-10-09 Sun 16:43]
     CLOCK: [2016-10-09 Sun 16:29]--[2016-10-09 Sun 16:43] =>  0:14
 
