--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,22 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-10 Mon 22:43]
+#+CAPTION: Clock summary at [2016-10-10 Mon 23:12]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:32* |      |      | 100.0 |
+| *Total time*                                                                | *8:01* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:32   |      |      | 100.0 |
-| Active                                                                      |        | 7:32 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |   4.9 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.2 |
-| COMPLETED Improve bintray support                                           |        |      | 0:26 |   5.8 |
-| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  17.0 |
-| COMPLETED Remove any remnants of annotations from quilt                     |        |      | 0:05 |   1.1 |
-| COMPLETED Solve the issue of too many "configurations"                      |        |      | 4:01 |  53.3 |
-| COMPLETED Merge decoration configuration and annotations factories          |        |      | 0:18 |   4.0 |
-| STARTED Move annotation factories into expander in yarn                     |        |      | 0:42 |   9.3 |
+| Stories                                                                     | 8:01   |      |      | 100.0 |
+| Active                                                                      |        | 8:01 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:22 |   4.6 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.0 |
+| COMPLETED Improve bintray support                                           |        |      | 0:26 |   5.4 |
+| COMPLETED Refactor opaque infrastructure                                    |        |      | 1:17 |  16.0 |
+| COMPLETED Remove any remnants of annotations from quilt                     |        |      | 0:05 |   1.0 |
+| COMPLETED Solve the issue of too many "configurations"                      |        |      | 4:01 |  50.1 |
+| COMPLETED Merge decoration configuration and annotations factories          |        |      | 0:18 |   3.7 |
+| STARTED Move annotation factories into expander in yarn                     |        |      | 1:11 |  14.8 |
 | STARTED Clean up terminology in dynamic                                     |        |      | 0:02 |   0.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -147,7 +147,9 @@ Tasks:
 As with quilt, get rid of the separation between annotations and
 configuration.
 
-*** STARTED Move annotation factories into expander in yarn           :story:
+*** COMPLETED Move annotation factories into expander in yarn         :story:
+    CLOSED: [2016-10-10 Mon 23:12]
+    CLOCK: [2016-10-10 Mon 22:43]--[2016-10-10 Mon 23:12] =>  0:29
     CLOCK: [2016-10-10 Mon 22:33]--[2016-10-10 Mon 22:42] =>  0:09
     CLOCK: [2016-10-10 Mon 22:18]--[2016-10-10 Mon 22:32] =>  0:14
     CLOCK: [2016-10-10 Mon 21:58]--[2016-10-10 Mon 22:17] =>  0:19
