--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-11 Tue 12:45]
+#+CAPTION: Clock summary at [2016-10-11 Tue 12:57]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *11:15* |       |      | 100.0 |
+| *Total time*                                                                | *11:27* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 11:15   |       |      | 100.0 |
-| Active                                                                      |         | 11:15 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:22 |   3.3 |
+| Stories                                                                     | 11:27   |       |      | 100.0 |
+| Active                                                                      |         | 11:27 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:22 |   3.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.8 |
-| COMPLETED Improve bintray support                                           |         |       | 0:26 |   3.9 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       | 1:17 |  11.4 |
+| COMPLETED Improve bintray support                                           |         |       | 0:26 |   3.8 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       | 1:17 |  11.2 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       | 0:05 |   0.7 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       | 4:01 |  35.7 |
-| COMPLETED Merge decoration configuration and annotations factories          |         |       | 0:18 |   2.7 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       | 1:11 |  10.5 |
-| STARTED Clean up terminology in dynamic                                     |         |       | 3:16 |  29.0 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       | 4:01 |  35.1 |
+| COMPLETED Merge decoration configuration and annotations factories          |         |       | 0:18 |   2.6 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       | 1:11 |  10.3 |
+| STARTED Clean up terminology in dynamic                                     |         |       | 3:28 |  30.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -158,6 +158,7 @@ There were a couple of instances left out in the configuration
 refactor, in yarn.
 
 *** STARTED Clean up terminology in dynamic                           :story:
+    CLOCK: [2016-10-11 Tue 12:45]--[2016-10-11 Tue 12:57] =>  0:12
     CLOCK: [2016-10-11 Tue 09:30]--[2016-10-11 Tue 12:44] =>  3:14
     CLOCK: [2016-10-10 Mon 21:56]--[2016-10-10 Mon 21:58] =>  0:02
 
@@ -179,8 +180,12 @@ anticipated. The objective of dynamic is to provide a way to annotate
 objects in yarn (well, anywhere in theory). Interpreting some
 [[https://en.wikipedia.org/wiki/Text_annotation][annotation terminology]] fairly liberally we have:
 
-- fields folder renamed to annotations.
 - dynamic -> annotations
+- fields folder renamed to annotations. Note: it is annotations and
+  not annotation_types because we will also store profiles
+  here. However, we will need a way to figure out which ones are
+  profiles and which are annotation types. Perhaps the extension could
+  become =annotation_types.json=.
 - object -> annotation. The marker for the annotation is the linkage
   between the annotation and the yarn element it annotates. Fields
   become the body of the annotation.
