--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-11 Tue 15:51]
+#+CAPTION: Clock summary at [2016-10-11 Tue 16:48]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *13:53* |       |      | 100.0 |
+| *Total time*                                                                | *14:49* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 13:53   |       |      | 100.0 |
-| Active                                                                      |         | 13:53 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:22 |   2.6 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.3 |
-| COMPLETED Improve bintray support                                           |         |       | 0:26 |   3.1 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       | 1:17 |   9.2 |
+| Stories                                                                     | 14:49   |       |      | 100.0 |
+| Active                                                                      |         | 14:49 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:22 |   2.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.1 |
+| COMPLETED Improve bintray support                                           |         |       | 0:26 |   2.9 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       | 1:17 |   8.7 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       | 0:05 |   0.6 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       | 4:01 |  28.9 |
-| COMPLETED Merge decoration configuration and annotations factories          |         |       | 0:18 |   2.2 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       | 1:11 |   8.5 |
-| STARTED Clean up terminology in dynamic                                     |         |       | 5:54 |  42.5 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       | 4:01 |  27.1 |
+| COMPLETED Merge decoration configuration and annotations factories          |         |       | 0:18 |   2.0 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       | 1:11 |   8.0 |
+| STARTED Clean up terminology in dynamic                                     |         |       | 6:50 |  46.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -158,6 +158,7 @@ There were a couple of instances left out in the configuration
 refactor, in yarn.
 
 *** STARTED Clean up terminology in dynamic                           :story:
+    CLOCK: [2016-10-11 Tue 15:52]--[2016-10-11 Tue 16:48] =>  0:56
     CLOCK: [2016-10-11 Tue 15:31]--[2016-10-11 Tue 15:51] =>  0:20
     CLOCK: [2016-10-11 Tue 15:05]--[2016-10-11 Tue 15:30] =>  0:25
     CLOCK: [2016-10-11 Tue 14:40]--[2016-10-11 Tue 14:42] =>  0:02
